--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         <p>Це сторінка про нашу бригаду.</p>
         <img src="/images/team.png" alt="Наша бригада" width="300" />
         <p><a href="/student">Дізнатися більше про студента</a></p>
+        <img src="/images/stas.png" alt="Фото Стаса" width="300" />
+        <p><a href="/stas">Дізнатися більше про студента</a></p>
         <p>
             <a href="https://nodejs.org/" target="_blank"
                 >Дізнатися більше про Node.js</a
